Added:JWT Email and Quantity update